Fix MapboxGL buttons in dark mode
Now using the correct CSS selector to display dark mode content because dark mode can be adapted by the user.

--- a/src/components/Map/mapbox-dark-mode.css
+++ b/src/components/Map/mapbox-dark-mode.css
@@ -1,6 +1,6 @@
 /* This adapts MapboxGL controls to dark mode when enabled. */
 
-@media (prefers-color-scheme: dark) {
+html.dark {
   .mapboxgl-ctrl-bottom-left, .mapboxgl-ctrl-bottom-right, .mapboxgl-ctrl-top-left, .mapboxgl-ctrl-top-right {
     z-index: auto !important;
   }
